--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	<uses-permission android:name="android.permission.CAMERA"/>
 	<uses-permission android:name="android.permission.VIBRATE"/>
+	<uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
 	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
 	<uses-permission android:name="com.javapapers.android.maps.path.permission.MAPS_RECEIVE"/>
 	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
@@ -92,9 +93,12 @@
 		<!-- ************************* SERVICES ******************************** -->
 		<receiver android:name=".svc.CesWakefulReceiver"/>
 
+		<service android:name=".svc.ActividadIntentService" />
+
 		<service
 			android:name=".svc.CesService"
 			android:exported="false"/>
+
 		<receiver
 			android:name=".svc.CesGeofenceReceiver"
 			android:exported="false">
@@ -102,14 +106,7 @@
 				<action android:name="com.cesoft.encuentrame3.ACCION_RECIBE_GEOFENCE"/>
 			</intent-filter>
 		</receiver>
-		<!--
-        service android:name="com.backendless.geo.LocationTracker"/>
-		<receiver android:name="com.backendless.AutoStart">
-			<intent-filter>
-				<action android:name="android.intent.action.BOOT_COMPLETED"/>
-			</intent-filter>
-		</receiver
-        -->
+
 		<receiver android:name=".svc.CesOnSysBoot">
 			<intent-filter>
 				<action android:name="android.intent.action.BOOT_COMPLETED"/>
@@ -152,6 +149,7 @@
 		</receiver>
 
 		<service android:name=".widget.WidgetRutaService"/>
+
 		<receiver
 			android:name=".widget.WidgetRuta"
 			android:label="@string/widget_ruta">
@@ -167,6 +165,7 @@
 				android:resource="@xml/widget_ruta"/>
 		</receiver>
 
+		<!-- Provider para que la camara cree el archivo de imagen por nosotros -->
 		<provider
 			android:name="android.support.v4.content.FileProvider"
 			android:authorities="${applicationId}.provider"
