--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,10 +74,10 @@ dependencies {
 	//annotationProcessor "com.google.dagger:dagger-implementationr:1.0"
 	//implementation "com.google.dagger:dagger:2.11"
 	//compileOnly 'javax.annotation:jsr250-api:1.0'
-	annotationProcessor "com.google.dagger:dagger-compiler:${VER_DAGGER}"
     implementation "com.google.dagger:dagger:${VER_DAGGER}"
     implementation "com.google.dagger:dagger-android:${VER_DAGGER}"
     implementation "com.google.dagger:dagger-android-support:${VER_DAGGER}"
+	annotationProcessor "com.google.dagger:dagger-compiler:${VER_DAGGER}"
 	annotationProcessor "com.google.dagger:dagger-android-processor:${VER_DAGGER}"
 
 	// Leak Canary
@@ -104,8 +104,11 @@ dependencies {
 	androidTestImplementation "com.android.support.test.espresso:espresso-intents:${VER_ESPRESSO}"
 	androidTestImplementation "com.android.support:support-annotations:${VER_ANDROID}"
 
-	//
+	// Event Bus
 	implementation 'org.greenrobot:eventbus:3.1.1'
+
+	// Time
+	implementation 'joda-time:joda-time:2.10'
 
 	/*androidTestImplementation("com.android.support.test.espresso:espresso-contrib:2.2")
 	{
