--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	<uses-permission android:name="android.permission.CAMERA"/>
 	<uses-permission android:name="android.permission.VIBRATE"/>
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
 	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
 	<uses-permission android:name="com.javapapers.android.maps.path.permission.MAPS_RECEIVE"/>
@@ -26,8 +27,6 @@
 		android:label="@string/app_name"
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
-
-		<!-- android:name="android.support.multidex.MultiDexApplication" -->
 
 		<!-- ************************* ACTIVITIES ************************* -->
 		<activity
@@ -83,14 +82,15 @@
 			android:theme="@android:style/Theme.Holo.Dialog.NoActionBar"/>
 		<activity
 			android:name=".ActWidgetNuevaRuta"
-			android:theme="@android:style/Theme.Holo.Dialog.NoActionBar"/>
+			android:theme="@android:style/Theme.Holo.Dialog.NoActionBar"
+			/>
 		<activity
 			android:name=".ActImagen"
 			android:configChanges="orientation|keyboardHidden|screenSize"
 			android:label="@string/title_act_imagen"
 			android:theme="@style/FullscreenTheme"/>
 
-		<!-- ************************* SERVICES ******************************** -->
+        <!-- ************************* SERVICES ******************************** -->
 
 		<service android:name=".svc.ActividadIntentService" />
 
