Some refactoring and add debug options on settings.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
 		applicationId 'com.cesoft.encuentrame3'
 		minSdkVersion 21
 		targetSdkVersion 28
-		versionCode 15
-		versionName "1.95"
+		versionCode 20
+		versionName "2.0"
 		multiDexEnabled true
 		testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
 	}
@@ -30,7 +30,7 @@ android {
 	return true
 }
 
-def VER_ANDROID = '28+'
+def VER_ANDROID = '28.0.0-rc01'
 def VER_GOOGLE = '15.0.1'
 def VER_FIREBASE = '16+'
 def VER_DAGGER_TEST = '2.8'
