--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 
 android {
     signingConfigs {
@@ -15,8 +16,8 @@ android {
         applicationId 'com.cesoft.encuentrame3'
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 20
-        versionName "2.0"
+        versionCode 21
+        versionName "2.1"
         multiDexEnabled true
         testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
     }
@@ -121,6 +122,11 @@ dependencies {
 
     // Time
     implementation 'joda-time:joda-time:2.10'
+
+    // Fabric Crashlytics
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.4@aar') {
+        transitive = true
+    }
 }
 
 apply plugin: 'com.google.gms.google-services'	//Google
