--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,13 @@ buildscript {
 		google()
 		mavenCentral()
 		maven { url 'https://maven.google.com' }
+		maven { url 'https://maven.fabric.io/public' }
 	}
 	dependencies {
 		classpath 'com.android.tools.build:gradle:3.1.4'
 		classpath 'me.tatarka:gradle-retrolambda:3.7.0'		//RetroLambda
 		classpath 'com.google.gms:google-services:4.0.1'
+		classpath 'io.fabric.tools:gradle:1.25.4'
 		//classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 
 		// NOTE: Do not place your application dependencies here; they belong
@@ -24,6 +26,7 @@ allprojects {
 		google()
 		mavenCentral()
 		maven { url 'https://maven.google.com' }
+		maven { url 'https://maven.fabric.io/public' }
 	}
 }
 
