--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,9 +5,9 @@ android {
     signingConfigs {
         config {
             keyAlias 'ces'
-            keyPassword 'sig550'
-            storePassword 'sig550'
-            storeFile file('/home/cesar/usr/tests/CesDoom2/cesks.jks')
+            keyPassword 'fake666'
+            storePassword 'fake666'
+            storeFile file('/home/cesar/usr/tests/Encuentrame/cesks.jks')
         }
     }
     compileSdkVersion 28
@@ -16,8 +16,8 @@ android {
         applicationId 'com.cesoft.encuentrame3'
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 22
-        versionName "2.2"
+        versionCode 23
+        versionName "2.3"
         multiDexEnabled true
         testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
     }
