--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,10 +16,9 @@ android {
         applicationId 'com.cesoft.encuentrame3'
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 24
-        versionName "2.4"
+        versionCode 25
+        versionName "2.5"
         multiDexEnabled true
-        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
     }
     buildTypes {
         release {
@@ -37,27 +36,25 @@ android {
 }
 
 def VER_ANDROID = '28.0.0'
-def VER_GOOGLE_LOCATION = '16.0.0'
-def VER_GOOGLE = '16.1.0'
-def VER_GOOGLE_AUTH = '16.0.1'
-def VER_FIREBASE = '16+'
-def VER_DAGGER_TEST = '2.8'
-def VER_DAGGER = '2.19'
-def VER_RUNNER = '0.5'
-def VER_ESPRESSO = '2.2.2'
-def VER_JUNIT = '4.12'
-def VER_GLIDE = '4.7.1'
-def VER_LEAKCANARY = '1.5.4'
+def VER_GOOGLE_LOCATION = '17.0.0'
+def VER_GOOGLE = '17.0.0'
+def VER_GOOGLE_AUTH = '17.0.0'
+def VER_FIREBASE = '17.0.0'
+def VER_FIREBASE2 = '18.0.0'
+def VER_DAGGER_TEST = '2.23.2'
+def VER_DAGGER = '2.23.2'
+def VER_RUNNER = '1.0.2'
+def VER_ESPRESSO = '3.0.2'
+def VER_JUNIT = '4.13-beta-3'
+def VER_GLIDE = '4.9.0'
+def VER_LEAKCANARY = '2.0-alpha-2'
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'org.jetbrains:annotations:13.0'
-    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'org.jetbrains:annotations:17.0.0'
 
     // Android
-    implementation "com.android.support:appcompat-v7:${VER_ANDROID}"
-    implementation "com.android.support:design:${VER_ANDROID}"
-    implementation "com.android.support:support-v4:${VER_ANDROID}"
+    implementation "com.google.android.material:material:1.1.0-alpha07"
 
     // Google
     implementation "com.google.android.gms:play-services-location:${VER_GOOGLE_LOCATION}"
@@ -66,68 +63,47 @@ dependencies {
     implementation "com.google.android.gms:play-services-gcm:${VER_GOOGLE}"
 
     // Firebase
-    implementation "com.google.firebase:firebase-auth:${VER_FIREBASE}"
+    implementation "com.google.firebase:firebase-auth:${VER_FIREBASE2}"
     implementation "com.google.firebase:firebase-core:${VER_FIREBASE}"
-    implementation "com.google.firebase:firebase-database:${VER_FIREBASE}"
-    implementation "com.google.firebase:firebase-storage:${VER_FIREBASE}"
-    implementation "com.google.firebase:firebase-crash:${VER_FIREBASE}"
-    implementation 'com.firebase:geofire-android:2.1.0'
+    implementation "com.google.firebase:firebase-database:${VER_FIREBASE2}"
+    implementation "com.google.firebase:firebase-storage:${VER_FIREBASE2}"
+    //implementation "com.google.firebase:firebase-crash:${VER_FIREBASE}"
+    implementation 'com.firebase:geofire-java:3.0.0'
 
     // Img
-
-    //implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation "com.github.bumptech.glide:glide:${VER_GLIDE}"
     annotationProcessor "com.github.bumptech.glide:compiler:${VER_GLIDE}"
 
     // Dagger
-
-    //annotationProcessor "com.google.dagger:dagger-implementationr:1.0"
-
-    //implementation "com.google.dagger:dagger:2.11"
-
-    //compileOnly 'javax.annotation:jsr250-api:1.0'
     implementation "com.google.dagger:dagger:${VER_DAGGER}"
     implementation "com.google.dagger:dagger-android:${VER_DAGGER}"
-    implementation "com.google.dagger:dagger-android-support:${VER_DAGGER}"
     annotationProcessor "com.google.dagger:dagger-compiler:${VER_DAGGER}"
     annotationProcessor "com.google.dagger:dagger-android-processor:${VER_DAGGER}"
 
-    // Leak Canary
-    debugImplementation "com.squareup.leakcanary:leakcanary-android:${VER_LEAKCANARY}"
-    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:${VER_LEAKCANARY}"
-    testImplementation "com.squareup.leakcanary:leakcanary-android-no-op:${VER_LEAKCANARY}"
-
     // Test
     testImplementation "junit:junit:${VER_JUNIT}"
-    testImplementation 'org.robolectric:robolectric:3.8'
-    testImplementation 'org.mockito:mockito-android:2.18.3'
+    testImplementation 'org.robolectric:robolectric:4.3'
+    testImplementation 'org.mockito:mockito-android:2.28.2'
     testImplementation "com.google.dagger:dagger-compiler:${VER_DAGGER_TEST}"
     testAnnotationProcessor "com.google.dagger:dagger-compiler:${VER_DAGGER_TEST}"
     annotationProcessor "com.google.dagger:dagger-compiler:${VER_DAGGER_TEST}"
     androidTestAnnotationProcessor "com.google.dagger:dagger-compiler:${VER_DAGGER_TEST}"
-
-    //testApt "com.google.dagger:dagger-compiler:${DAGGER}"
-
     // Android Test
     androidTestImplementation "junit:junit:${VER_JUNIT}"
-    androidTestImplementation 'org.mockito:mockito-android:2.18.3'
-    androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
-    androidTestImplementation "com.android.support.test:runner:${VER_RUNNER}"
-    androidTestImplementation "com.android.support.test:rules:${VER_RUNNER}"
-    androidTestImplementation "com.android.support.test.espresso:espresso-core:${VER_ESPRESSO}"
-    androidTestImplementation "com.android.support.test.espresso:espresso-intents:${VER_ESPRESSO}"
-    androidTestImplementation "com.android.support:support-annotations:${VER_ANDROID}"
+    androidTestImplementation 'org.mockito:mockito-android:2.28.2'
+    androidTestImplementation 'org.hamcrest:hamcrest-library:2.1'
 
     // Event Bus
     implementation 'org.greenrobot:eventbus:3.1.1'
 
     // Time
-    implementation 'joda-time:joda-time:2.10'
+    implementation 'joda-time:joda-time:2.10.2'
 
     // Fabric Crashlytics
-    implementation('com.crashlytics.sdk.android:crashlytics:2.9.4@aar') {
-        transitive = true
-    }
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+//    implementation('com.crashlytics.sdk.android:crashlytics:2.10.1@aar') {
+//        transitive = true
+//    }
 }
 
 apply plugin: 'com.google.gms.google-services'	//Google
