--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.cesoft.encuentrame3"
+<manifest xmlns:tools="http://schemas.android.com/tools"
+	package="com.cesoft.encuentrame3"
 		  xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<uses-permission android:name="android.permission.INTERNET"/>
@@ -28,7 +29,9 @@
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
 		android:supportsRtl="true"
-		android:theme="@style/AppTheme">
+		android:theme="@style/AppTheme"
+		android:fullBackupContent="@xml/backup_descriptor"
+		tools:ignore="GoogleAppIndexingWarning">
 
 		<!-- ************************* ACTIVITIES ************************* -->
 		<activity
@@ -180,7 +183,7 @@
 		</receiver>
 
 		<!-- Provider para que la camara cree el archivo de imagen por nosotros -->
-		<provider
+		<!-- provider
 			android:name="android.support.v4.content.FileProvider"
 			android:authorities="${applicationId}.provider"
 			android:exported="false"
@@ -188,7 +191,7 @@
 			<meta-data
 				android:name="android.support.FILE_PROVIDER_PATHS"
 				android:resource="@xml/provider_path"/>
-		</provider>
+		</provider -->
 
 	</application>
 </manifest>
