--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,6 @@ org.gradle.parallel=true
 org.gradle.daemon=true
 #org.gradle.jvmargs=-Xmx3400m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.jvmargs=-XX\:MaxHeapSize\=512m -Xmx512m
+
+android.useAndroidX=true
+android.enableJetifier=true
