--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
 apply plugin: 'io.fabric'
 
 android {
@@ -96,6 +98,14 @@ dependencies {
 
     // Fabric Crashlytics
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+
+    // Kotlin
+    implementation "androidx.core:core-ktx:1.0.2"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
-apply plugin: 'com.google.gms.google-services'	//Google
+apply plugin: 'com.google.gms.google-services'
+
+repositories {
+    mavenCentral()
+}    //Google
