--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-	repositories {
+    ext.kotlin_version = '1.3.40'
+    repositories {
 		google()
 		jcenter()
 		mavenCentral()
@@ -13,7 +14,8 @@ buildscript {
 		classpath 'me.tatarka:gradle-retrolambda:3.7.0'		//RetroLambda
 		classpath 'com.google.gms:google-services:4.2.0'
 		classpath 'io.fabric.tools:gradle:1.29.0'
-	}
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
 }
 
 allprojects {
