--- a/gradle.properties
+++ b/gradle.properties
@@ -24,3 +24,5 @@ org.gradle.jvmargs=-XX\:MaxHeapSize\=512m -Xmx512m
 
 android.useAndroidX=true
 android.enableJetifier=true
+
+#android.debug.obsoleteApi=true    o ejecuta en terminal: ./gradlew -Pandroid.debug.obsoleteApi=true
