--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
         }
     }
     compileSdkVersion 29
-    buildToolsVersion '29.0.0'
+    buildToolsVersion '29.0.2'
     defaultConfig {
         applicationId 'com.cesoft.encuentrame3'
         minSdkVersion 21
@@ -37,9 +37,7 @@ android {
     return true
 }
 
-def VER_GOOGLE_LOCATION = '17.0.0'
 def VER_GOOGLE = '17.0.0'
-def VER_GOOGLE_AUTH = '17.0.0'
 def VER_DAGGER_TEST = '2.23.2'
 def VER_DAGGER = '2.23.2'
 def VER_JUNIT = '4.13-beta-3'
@@ -49,20 +47,28 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'org.jetbrains:annotations:17.0.0'
 
-    // Android
-    implementation "com.google.android.material:material:1.1.0-alpha09"
-
+    // Android X
+    implementation "androidx.preference:preference:1.1.0"
     // Google
-    implementation "com.google.android.gms:play-services-location:${VER_GOOGLE_LOCATION}"
-    implementation "com.google.android.gms:play-services-auth:${VER_GOOGLE_AUTH}"
-    implementation "com.google.android.gms:play-services-maps:${VER_GOOGLE}"
+    implementation "com.google.android.material:material:1.1.0-alpha10"
+    // Services
     implementation "com.google.android.gms:play-services-gcm:${VER_GOOGLE}"
+    implementation "com.google.android.gms:play-services-location:${VER_GOOGLE}"
+    implementation "com.google.android.gms:play-services-auth:${VER_GOOGLE}"
+    implementation "com.google.android.gms:play-services-maps:${VER_GOOGLE}"
+    // Activity recognition
+    //implementation "com.google.android.gms:play-services-fitness:18.0.0"
+
+    // Kotlin
+    implementation 'androidx.core:core-ktx:1.1.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     // Firebase
-    implementation "com.google.firebase:firebase-core:17.0.1"
-    implementation "com.google.firebase:firebase-auth:18.1.0"
-    implementation "com.google.firebase:firebase-database:18.0.1"
-    implementation "com.google.firebase:firebase-storage:18.1.1"
+    implementation "com.google.firebase:firebase-core:17.2.0"
+    implementation "com.google.firebase:firebase-auth:19.0.0"
+    implementation "com.google.firebase:firebase-database:19.1.0"
+    implementation "com.google.firebase:firebase-storage:19.0.1"
     implementation 'com.firebase:geofire-java:3.0.0'
 
     // Img
@@ -96,10 +102,6 @@ dependencies {
 
     // Fabric Crashlytics
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
-
-    // Kotlin
-    implementation "androidx.core:core-ktx:1.0.2"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 apply plugin: 'com.google.gms.google-services'
