--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
 	<uses-permission android:name="android.permission.INTERNET"/>
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+	<uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+	<uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
@@ -14,12 +16,12 @@
 	<uses-permission android:name="android.permission.CAMERA"/>
 	<uses-permission android:name="android.permission.VIBRATE"/>
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
-	<uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
+	<uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION"/>
 	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
 	<uses-permission android:name="com.javapapers.android.maps.path.permission.MAPS_RECEIVE"/>
-	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-	<uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
-	<uses-permission android:name="android.permission.WAKE_LOCK" />
+	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
+	<uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"/>
+	<uses-permission android:name="android.permission.WAKE_LOCK"/>
 
 	<uses-feature android:name="android.hardware.location.gps"/>
 	<uses-feature android:name="android.hardware.camera" android:required="false" />
@@ -47,38 +49,30 @@
 		<activity
 			android:name=".ActLogin"
 			android:label="@string/app_name"
-			android:theme="@style/AppTheme.NoActionBar">
-		</activity>
-		<!-- android:launchMode="singleInstance" singleTask -->
+			android:theme="@style/AppTheme.NoActionBar"/>
 		<activity
 			android:name=".ActMain"
 			android:label="@string/title_activity_act_main"
 			android:launchMode="singleInstance"
-			android:theme="@style/AppTheme.NoActionBar">
-		</activity>
+			android:theme="@style/AppTheme.NoActionBar"/>
 		<activity
-			android:name=".ActConfig"
-			android:label="@string/title_activity_act_config">
-		</activity>
+			android:name=".ActSettings"
+			android:label="@string/title_activity_act_config" />
 		<activity
 			android:name=".ActLugar"
 			android:label="@string/title_activity_act_lugar"
-			android:theme="@style/AppTheme.NoActionBar">
-		</activity>
+			android:theme="@style/AppTheme.NoActionBar"/>
 		<activity
 			android:name=".ActRuta"
 			android:label="@string/title_activity_act_ruta"
-			android:theme="@style/AppTheme.NoActionBar">
-		</activity>
+			android:theme="@style/AppTheme.NoActionBar"/>
 		<activity
 			android:name=".ActAviso"
 			android:label="@string/title_activity_act_aviso"
-			android:theme="@style/AppTheme.NoActionBar">
-		</activity>
+			android:theme="@style/AppTheme.NoActionBar"/>
 		<activity
 			android:name=".ActMaps"
-			android:label="@string/title_activity_act_maps">
-		</activity>
+			android:label="@string/title_activity_act_maps"/>
 		<activity
 			android:name=".ActBuscar"
 			android:label="@string/title_activity_act_buscar"
@@ -88,35 +82,28 @@
 			android:theme="@android:style/Theme.Holo.Dialog.NoActionBar"/>
 		<activity
 			android:name=".ActWidgetNuevaRuta"
-			android:theme="@android:style/Theme.Holo.Dialog.NoActionBar"
-			/>
+			android:theme="@android:style/Theme.Holo.Dialog.NoActionBar"/>
 		<activity
 			android:name=".ActImagen"
 			android:configChanges="orientation|keyboardHidden|screenSize"
 			android:label="@string/title_act_imagen"
 			android:theme="@style/FullscreenTheme"/>
 
-        <!-- ************************* SERVICES ******************************** -->
+		<!-- ************************* SERVICES ******************************** -->
+
+		<service android:name=".svc.GeotrackingService"
+			android:foregroundServiceType="location" /><!-- ForegroundService VS ACCESS_BACKGROUND_LOCATION ??? -->
+		<service android:name=".svc.GeofencingService"
+			android:foregroundServiceType="location" />
 
 		<service android:name=".svc.ActividadIntentService" />
-
-		<service
+		<!-- service
 			android:name=".svc.LoadGeofenceJobService"
 			android:label="GeoFence Load Service"
-			android:permission="android.permission.BIND_JOB_SERVICE" />
-		<service
-			android:name=".svc.GeoTrackingJobService"
-			android:label="GeoTraking Service"
-			android:permission="android.permission.BIND_JOB_SERVICE" />
+			android:permission="android.permission.BIND_JOB_SERVICE" / -->
 
-		<receiver
-			android:name=".svc.CesGeofenceReceiver"
-			android:exported="false">
-			<intent-filter>
-				<action android:name="com.cesoft.encuentrame3.ACCION_RECIBE_GEOFENCE"/>
-			</intent-filter>
-		</receiver>
-
+		<!-- ************************* RECEIVERS ******************************** -->
+		<receiver android:name=".svc.CesGeofenceReceiver" />
 		<receiver
 			android:name=".svc.CesOnSysBoot">
 			<intent-filter>
@@ -184,15 +171,15 @@
 		</receiver>
 
 		<!-- Provider para que la camara cree el archivo de imagen por nosotros -->
-		<!-- provider
-			android:name="android.support.v4.content.FileProvider"
-			android:authorities="${applicationId}.provider"
+		<provider
+			android:name="androidx.core.content.FileProvider"
+			android:authorities="${applicationId}.fileprovider"
 			android:exported="false"
 			android:grantUriPermissions="true">
 			<meta-data
 				android:name="android.support.FILE_PROVIDER_PATHS"
 				android:resource="@xml/provider_path"/>
-		</provider -->
+		</provider>
 
 	</application>
 </manifest>
