--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="18" />
 	<uses-permission android:name="android.permission.RECORD_AUDIO" />
 	<uses-permission android:name="android.permission.CAMERA"/>
 	<uses-permission android:name="android.permission.VIBRATE"/>
@@ -164,17 +164,16 @@
 				<action android:name="com.cesoft.encuentrame3.WidgetRuta.ACTION_WIDGET_RUTA_ADD"/>
 				<action android:name="com.cesoft.encuentrame3.WidgetRuta.ACTION_WIDGET_RUTA_STOP"/>
 			</intent-filter>
-
 			<meta-data
 				android:name="android.appwidget.provider"
 				android:resource="@xml/widget_ruta"/>
 		</receiver>
 
-		<!-- Provider para que la camara cree el archivo de imagen por nosotros -->
 		<provider
 			android:name="androidx.core.content.FileProvider"
 			android:authorities="${applicationId}.fileprovider"
 			android:exported="false"
+			android:enabled="true"
 			android:grantUriPermissions="true">
 			<meta-data
 				android:name="android.support.FILE_PROVIDER_PATHS"
