--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ dependencies {
 
     // Android X
     implementation "androidx.preference:preference:1.1.0"
+    implementation 'androidx.navigation:navigation-fragment:2.1.0'
+    implementation 'androidx.navigation:navigation-ui:2.1.0'
     // Google
     implementation "com.google.android.material:material:1.2.0-alpha02"
     // Services
