--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,15 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'io.fabric'
 
 android {
     signingConfigs {
         config {
             keyAlias 'ces'
-            keyPassword 'sig550'
-            storePassword 'sig550'
+            keyPassword 'dart550'
+            storePassword 'dart550'
             storeFile file('/home/cesar/usr/tests/cesks.jks')
         }
     }
@@ -72,6 +73,13 @@ dependencies {
     implementation "com.google.firebase:firebase-database:19.2.0"
     implementation "com.google.firebase:firebase-storage:19.1.0"
     implementation 'com.firebase:geofire-java:3.0.0'
+    // Crashlytics
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+    // Analytics
+    //https://firebase.google.com/docs/analytics/get-started?platform=android&authuser=1
+    //implementation 'com.google.firebase:firebase-analytics:17.2.1'
+
+
 
     // Img
     implementation "com.github.bumptech.glide:glide:${VER_GLIDE}"
@@ -79,6 +87,7 @@ dependencies {
 
     // Dagger
     implementation "com.google.dagger:dagger:${VER_DAGGER}"
+    kapt "com.google.dagger:dagger-compiler:${VER_DAGGER}"
     implementation "com.google.dagger:dagger-android:${VER_DAGGER}"
     annotationProcessor "com.google.dagger:dagger-compiler:${VER_DAGGER}"
     annotationProcessor "com.google.dagger:dagger-android-processor:${VER_DAGGER}"
@@ -102,8 +111,7 @@ dependencies {
     // Time
     implementation 'joda-time:joda-time:2.10.2'
 
-    // Fabric Crashlytics
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
