Catch some rare exceptions

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,6 +111,7 @@ dependencies {
     // Time
     implementation 'joda-time:joda-time:2.10.2'
 
+    // Memory Leak Checker
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0'
 }
 
